--- a/Redone-Code-for- SkillsLab/Hobbies_Page.html
+++ b/Redone-Code-for- SkillsLab/Hobbies_Page.html
@@ -18,7 +18,7 @@
 </ul>
 </nav>
   <main>
-	<iframe class="video" width="600" height="345" src="https://www.youtube.com/embed/7iocoP-BQw8">
+	<iframe class="video" src="https://www.youtube.com/embed/7iocoP-BQw8">
     </iframe>
       <article class="hobbies1">
 	  <h1 class="hobbiesHeader">My biggest hobbie is Cars and Motorcycles</h1>
